# react-native-audio-waveform

./: .npmrc  .trigger-release  CHANGELOG.md  PUSH_AND_RELEASE.sh  README.md  nitro.json  package-lock.json  package.json  package.tgz  react-native-audio-waveform.podspec  typedoc.json
.github/: workflows-summary.md
__tests__/: AudioPlayer.concurrent.test.ts  AudioPlayer.control.test.ts  AudioPlayer.lifecycle.test.ts  AudioPlayer.properties.test.ts  AudioRecorder.callbacks.test.ts  AudioRecorder.errors.test.ts  AudioRecorder.lifecycle.test.ts  AudioRecorder.monitoring.integration.test.ts  AudioRecorder.monitoring.test.ts  AudioRecorder.permissions.test.ts  AudioRecorder.recording.test.ts  AudioRecorderBase.test.ts  BackwardCompatibility.test.ts  Cancellation.test.ts  CompleteWorkflows.integration.test.ts  ConcurrentOperations.property.test.ts  ErrorScenarios.integration.test.ts  MemorySafety.property.test.ts  Performance.improvement.property.test.ts  Performance.memoryProfiling.test.ts  Performance.nativeMethodCalls.test.ts  Performance.realtimeMonitoring.test.ts  Performance.waveformExtraction.test.ts  PlatformSpecific.integration.test.ts  ProgressReporting.integration.test.ts  TypeSafety.property.test.ts  WaveformConsistency.property.test.ts  WaveformExtractor.formats.test.ts  WaveformExtractor.integration.test.ts  WaveformExtractor.test.ts  WaveformProcessor.test.ts  components.test.tsx  hooks.test.ts
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/java/com/audiowaveform/: AudioPlayerKotlin.kt  AudioRecorderKotlin.kt  AudioWaveformModule.kt  WaveformExtractorKotlin.kt
coverage/: clover.xml
cpp/: AudioPlayerBase.hpp  AudioRecorderBase.hpp  AudioWaveformFactory.cpp  AudioWaveformFactory.hpp  (+4 more)
src/: index.ts  (+1 more)
(+55 files in other folders)
